[tool.poetry]
name = "book-converter"
version = "0.1.0"
description = "Script to convert pdf files to epub"
authors = ["Fausto A. Ramos <fausto.ramosr92@gmail.com>"]
readme = "README.md"
packages = [{include = "book_converter"}]

[tool.poetry.dependencies]
python = "^3.11"
PyPDF2 = "^3.0.1"
EbookLib = "^0.18"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
